--- a/public/styles/dashboard.css
+++ b/public/styles/dashboard.css
@@ -532,32 +532,6 @@ td {
    margin-bottom: 20px;
 }
 
-.alert__success {
-   position: fixed;
-   display: flex;
-   top: 7px;
-   right: 21px;
-   height: 70px;
-   width: 300px;
-   background-color: #3bdc60;
-   border-radius: 14px;
-   color: white;
-   z-index: 1000;
-}
-.alert__success i {
-   font-size: 38px;
-   text-align: center;
-   padding-top: 15px;
-   width: 24%;
-   height: 100%;
-}
-
-.alert__content {
-   line-height: 17px;
-}
-.alert__content h6 {
-   padding-top: 13px;
-}
 #selectBox {
    margin-bottom: 20px;
 }
@@ -579,4 +553,93 @@ td {
 
 .create__account {
    text-align: center;
+}
+
+.alert__success {
+   position: fixed;
+   display: flex;
+   top: 7px;
+   right: 21px;
+   height: 70px;
+   width: 300px;
+   background-color: #3bdc60;
+   border-radius: 14px;
+   color: white;
+   z-index: 1000;
+   box-shadow: 7px 6px 14px #888888;
+}
+.alert__success i {
+   font-size: 38px;
+   text-align: center;
+   padding-top: 15px;
+   width: 24%;
+   height: 100%;
+}
+.alert__content .success__first {
+   padding-top: 13px;
+   font-size: 18px;
+   font-weight: 600;
+   margin-bottom: 0;
+}
+
+.alert__content .success__second {
+   padding-top: 9px;
+   font-size: 16px;
+   font-weight: 500;
+}
+
+.alert__success {
+   position: fixed;
+   display: flex;
+   top: 7px;
+   right: 21px;
+   height: 70px;
+   width: 300px;
+   background-color: #3bdc60;
+   border-radius: 14px;
+   color: white;
+   z-index: 1000;
+}
+.alert__success i {
+   font-size: 38px;
+   text-align: center;
+   padding-top: 15px;
+   width: 24%;
+   height: 100%;
+}
+
+.alert__content {
+   line-height: 7px;
+}
+.alert__fail {
+   position: fixed;
+   display: flex;
+   top: 7px;
+   right: 21px;
+   height: 70px;
+   width: 300px;
+   background-color: #dc3b3b;
+   border-radius: 14px;
+   color: white;
+   z-index: 1000;
+   box-shadow: 7px 6px 14px #888888;
+}
+.alert__fail i {
+   font-size: 48px;
+   text-align: center;
+   padding-top: 11px;
+   width: 24%;
+   height: 100%;
+}
+.alert__content .fail__first {
+   padding-top: 13px;
+   font-size: 18px;
+   font-weight: 600;
+   margin-bottom: 0;
+}
+
+.alert__content .fail__second {
+   padding-top: 9px;
+   font-size: 16px;
+   font-weight: 500;
 }
