--- a/public/styles/register.css
+++ b/public/styles/register.css
@@ -1,6 +1,6 @@
 * {
-   margin: auto;
-   padding: auto;
+   margin: 0;
+   padding: 0;
    box-sizing: border-box;
 }
 
@@ -26,6 +26,7 @@ html {
 
 .content-main {
    width: 70%;
+   margin:auto;
    display: flex;
 }
 
@@ -313,7 +314,8 @@ p.agileits2 {
 }
 
 .alert__content {
-   line-height: 17px;
+   line-height: 5px;
+   margin-left: 5px;
 }
 .alert__content .success__first {
    padding-top: 13px;
@@ -323,6 +325,38 @@ p.agileits2 {
 }
 
 .alert__content .success__second {
+   padding-top: 9px;
+   font-size: 16px;
+   font-weight: 500;
+}
+.alert__fail {
+   position: fixed;
+   display: flex;
+   top: 7px;
+   right: 21px;
+   height: 70px;
+   width: 300px;
+   background-color: #dc3b3b;
+   border-radius: 14px;
+   color: white;
+   z-index: 1000;
+   box-shadow: 7px 6px 14px #888888;
+}
+.alert__fail i {
+   font-size: 48px;
+   text-align: center;
+   padding-top: 11px;
+   width: 24%;
+   height: 100%;
+}
+.alert__content .fail__first {
+   padding-top: 13px;
+   font-size: 18px;
+   font-weight: 600;
+   margin-bottom: 0;
+}
+
+.alert__content .fail__second {
    padding-top: 9px;
    font-size: 16px;
    font-weight: 500;
