--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -157,6 +157,8 @@ a:hover {
    border-radius: 14px;
    color: white;
    z-index: 1000;
+   box-shadow: 7px 6px 14px #888888;
+
 }
 .alert__success i {
    font-size: 38px;
@@ -173,6 +175,39 @@ a:hover {
 }
 
 .alert__content .success__second {
+   padding-top: 9px;
+   font-size: 16px;
+   font-weight: 500;
+}
+
+.alert__fail {
+   position: fixed;
+   display: flex;
+   top: 7px;
+   right: 21px;
+   height: 70px;
+   width: 300px;
+   background-color: #dc3b3b;
+   border-radius: 14px;
+   color: white;
+   z-index: 1000;
+   box-shadow: 7px 6px 14px #888888;
+}
+.alert__fail i {
+   font-size: 48px;
+   text-align: center;
+   padding-top: 11px;
+   width: 24%;
+   height: 100%;
+}
+.alert__content .fail__first {
+   padding-top: 13px;
+   font-size: 18px;
+   font-weight: 600;
+   margin-bottom: 0;
+}
+
+.alert__content .fail__second {
    padding-top: 9px;
    font-size: 16px;
    font-weight: 500;
