--- a/views/admin.layouts/cover.ejs
+++ b/views/admin.layouts/cover.ejs
@@ -6,8 +6,24 @@
       <div class="alert__success">
          <i class="las la-check-circle"></i>
          <div class="alert__content">
-            <h6>Thành Công!</h6>
-            <h7><%= alert%></h7>
+            <div class="success__first">
+               <p>Thành Công!</p>
+            </div>
+            <div class="success__second">
+               <p><%= alert%></p>
+            </div>
+         </div>
+      </div>
+      <% } %> <% if (fail.length > 0) { %>
+      <div class="alert__fail">
+         <i class="las la-times-circle"></i>
+         <div class="alert__content">
+            <div class="fail__first">
+               <p>Thất bại!</p>
+            </div>
+            <div class="fail__second">
+               <p><%= fail%></p>
+            </div>
          </div>
       </div>
       <% } %>
