--- a/views/admin.layouts/header.ejs
+++ b/views/admin.layouts/header.ejs
@@ -23,9 +23,9 @@
       crossorigin="anonymous"
    ></script>
    <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
-   <script type="text/javascript">
+   <!-- <script type="text/javascript">
       jQuery(document).ready(function ($) {
          $('.alert__success').delay(3000).fadeOut('slow');
       });
-   </script>
+   </script> -->
 </head>
