--- a/views/admin/create.ejs
+++ b/views/admin/create.ejs
@@ -21,17 +21,7 @@
                            class="pl-2 rounded form-control"
                         />
                      </div>
-                     <div class="form-group">
-                        <p class="text-left">Mật khẩu</p>
-                        <input
-                           type="password"
-                           name="password"
-                           placeholder="Mật khẩu"
-                           id="password"
-                           required=""
-                           class="pl-2 rounded form-control lock"
-                        />
-                     </div>
+
                      <div class="form-group">
                         <p class="text-left">Tên đầy đủ</p>
                         <input
@@ -45,18 +35,6 @@
                         />
                      </div>
                      <div class="form-group">
-                        <p class="text-left">Nhập lại mật khẩu</p>
-                        <input
-                           type="password"
-                           class="lock pl-2 rounded form-control"
-                           name="confirm-password"
-                           placeholder="Nhập lại mật khẩu"
-                           id="confirm-password"
-                           required=""
-                           class="pl-2 rounded form-control"
-                        />
-                     </div>
-                     <div class="form-group">
                         <p class="text-left">Số điện thoại</p>
                         <input
                            type="text"
@@ -64,6 +42,29 @@
                            name="phonenumber"
                            placeholder="Số điện thoại"
                            title="Please enter your Phone Number"
+                           required=""
+                           class="pl-2 rounded form-control"
+                        />
+                     </div>
+                     <div class="form-group">
+                        <p class="text-left">Mật khẩu</p>
+                        <input
+                           type="password"
+                           name="password"
+                           placeholder="Mật khẩu"
+                           id="password"
+                           required=""
+                           class="pl-2 rounded form-control lock"
+                        />
+                     </div>
+                     <div class="form-group">
+                        <p class="text-left">Nhập lại mật khẩu</p>
+                        <input
+                           type="password"
+                           class="lock pl-2 rounded form-control"
+                           name="confirmPassword"
+                           placeholder="Nhập lại mật khẩu"
+                           id="confirm-password"
                            required=""
                            class="pl-2 rounded form-control"
                         />
