--- a/views/components/apartment.ejs
+++ b/views/components/apartment.ejs
@@ -129,7 +129,7 @@
 
                               <div class="input-box">
                                  <label>Tiến Độ Thanh Toán</label>
-                                 <select name="type" class="form-control" onChange="yearVnh(this.value)" id="getYear">
+                                 <select name="type" class="form-control" onChange="year(this.value)" id="getYear">
                                     <option value="normal">Tiến Độ Thường</option>
                                     <option value="70">70%</option>
                                     <option value="90">90%</option>
@@ -230,14 +230,14 @@
 
 
       <script>
-         function yearVnh(value) {
+         function year(value) {
             var htmlObj = document.getElementById('show-option');
             if (value) {
                htmlObj.innerHTML = '';
             }
             if (value == 'vnh') {
                htmlObj.innerHTML =
-                  " <select type='number' name='yearVnh'> <option value='' disabled hidden>0</option> <option value='5'>5 năm</option> <option value='6'>6 năm</option> <option value='7'>7 năm</option> <option value='8'>8 năm</option> <option value='9'>9 năm</option> <option value='10' selected>10 năm</option> <option value='11'>11 năm</option> <option value='12'>12 năm</option> <option value='13'>13 năm</option> <option value='14'>14 năm</option> <option value='15'>15 năm</option> </select> ";
+               `<select type='number' name='yearVnh'> <option value='5'>5 năm</option> <option value='6'>6 năm</option> <option value='7'>7 năm</option> <option value='8'>8 năm</option> <option value='9'>9 năm</option> <option value='10' selected>10 năm</option> <option value='11'>11 năm</option> <option value='12'>12 năm</option> <option value='13'>13 năm</option> <option value='14'>14 năm</option> <option value='15'>15 năm</option> </select>`;
             }
          }
       </script>
