--- a/views/components/index.ejs
+++ b/views/components/index.ejs
@@ -58,6 +58,7 @@
                                     <option value="3000000000">Dưới 3.000.000.000</option>
                                     <option value="5000000000">Dưới 5.000.000.000</option>
                                     <option value="10000000000">Dưới 10.000.000.000</option>
+                                    <option value="30000000000">Dưới 30.000.000.000</option>
                                  </select>
                               </div>
                            </div>
@@ -138,11 +139,13 @@
                                     <span class="home__infor-icon_price"
                                        ><%= listRegion1[i].price.toLocaleString("en") %> VNĐ</span
                                     >
-                                    <% for(let j =0 ; j < favorite.length; j++) { %>
-                                       <% if(favorite[j].apartmentId == listRegion1[i]._id) { %>
-                                      <i class="fa-regular fa-heart icon_hearth" style="background-color:rgb(67, 222, 88)"></i>
-                                      <%} %>  
-                                      <% } %>
+                                    <% for(let j =0 ; j < favorite.length; j++) { %> <% if(favorite[j].apartmentId ==
+                                    listRegion1[i]._id) { %>
+                                    <i
+                                       class="fa-regular fa-heart icon_hearth"
+                                       style="background-color: rgb(67, 222, 88)"
+                                    ></i>
+                                    <%} %> <% } %>
                                  </div>
                               </div>
                            </div>
@@ -178,11 +181,13 @@
                                     <span class="home__infor-icon_price"
                                        ><%= listRegion2[i].price.toLocaleString("en").toLocaleString("en") %> VNĐ</span
                                     >
-                                    <% for(let j =0 ; j < favorite.length; j++) { %>
-                                     <% if(favorite[j].apartmentId == listRegion2[i]._id) { %>
-                                    <i class="fa-regular fa-heart icon_hearth" style="background-color:rgb(67, 222, 88)"></i>
-                                    <%} %>  
-                                    <% } %>
+                                    <% for(let j =0 ; j < favorite.length; j++) { %> <% if(favorite[j].apartmentId ==
+                                    listRegion2[i]._id) { %>
+                                    <i
+                                       class="fa-regular fa-heart icon_hearth"
+                                       style="background-color: rgb(67, 222, 88)"
+                                    ></i>
+                                    <%} %> <% } %>
                                  </div>
                               </div>
                            </div>
@@ -218,11 +223,13 @@
                                     <span class="home__infor-icon_price"
                                        ><%= listRegion3[i].price.toLocaleString("en") %> VNĐ</span
                                     >
-                                    <% for(let j =0 ; j < favorite.length; j++) { %>
-                                       <% if(favorite[j].apartmentId == listRegion3[i]._id) { %>
-                                      <i class="fa-regular fa-heart icon_hearth" style="background-color:rgb(67, 222, 88)"></i>
-                                      <%} %>  
-                                      <% } %>
+                                    <% for(let j =0 ; j < favorite.length; j++) { %> <% if(favorite[j].apartmentId ==
+                                    listRegion3[i]._id) { %>
+                                    <i
+                                       class="fa-regular fa-heart icon_hearth"
+                                       style="background-color: rgb(67, 222, 88)"
+                                    ></i>
+                                    <%} %> <% } %>
                                  </div>
                               </div>
                            </div>
