--- a/views/components/search.ejs
+++ b/views/components/search.ejs
@@ -68,6 +68,7 @@
                                           <option value="3000000000">Dưới 3.000.000.000</option>
                                           <option value="5000000000">Dưới 5.000.000.000</option>
                                           <option value="10000000000">Dưới 10.000.000.000</option>
+                                          <option value="30000000000">Dưới 30.000.000.000</option>
                                        </select>
                                     </div>
                                  </div>
@@ -95,6 +96,7 @@
                      </div>
                   </div>
                </div>
+               <% if(listApartment.length > 0) {%>
                <h3>Có <%=listApartment.length%> kết quả được tìm thấy</h3>
                <div class="searchResult__content">
                   <% for(let i = 0; i < listApartment.length; i++) {%>
@@ -129,7 +131,9 @@
                         </div>
                      </div>
                   </div>
-                  <% } %>
+                  <% } %> <% } else { %>
+                  <h3>Không tìm thấy kết quả</h3>
+                  <% }%>
                </div>
             </div>
          </div>
