--- a/views/layouts/header.ejs
+++ b/views/layouts/header.ejs
@@ -46,6 +46,19 @@
    </div>
 </div>
 <% } %>
+<% if (fail.length > 0) { %>
+   <div class="alert__fail">
+      <i class="las la-times-circle"></i>
+      <div class="alert__content">
+         <div class="fail__first">
+            <p>Thất bại!</p>
+         </div>
+         <div class="fail__second">
+            <p><%= fail%></p>
+         </div>
+      </div>
+   </div>
+   <% } %>
 <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
 <!-- <script type="text/javascript">
    jQuery(document).ready(function ($) {
