--- a/views/layouts/register.ejs
+++ b/views/layouts/register.ejs
@@ -15,6 +15,31 @@
       />
    </head>
    <body>
+      <% if (alert.length > 0) { %>
+      <div class="alert__success">
+         <i class="las la-check-circle"></i>
+         <div class="alert__content">
+            <div class="success__first">
+               <p>Thành Công!</p>
+            </div>
+            <div class="success__second">
+               <p><%= alert%></p>
+            </div>
+         </div>
+      </div>
+      <% } %> <% if (fail.length > 0) { %>
+      <div class="alert__fail">
+         <i class="las la-times-circle"></i>
+         <div class="alert__content">
+            <div class="fail__first">
+               <p>Thất bại!</p>
+            </div>
+            <div class="fail__second">
+               <p><%= fail%></p>
+            </div>
+         </div>
+      </div>
+      <% } %>
       <div class="main">
          <h1 class="title">Resort Real Estate Analysis</h1>
          <div class="content-main">
@@ -68,7 +93,7 @@
                      <input
                         type="password"
                         class="lock"
-                        name="confirm-password"
+                        name="confirmPassword"
                         placeholder="Nhập lại mật khẩu"
                         id="confirm-password"
                         required=""
@@ -83,15 +108,7 @@
             </div>
          </div>
       </div>
-      <% if (alert.length > 0) { %>
-      <div class="alert__success">
-         <i class="las la-check-circle"></i>
-         <div class="alert__content">
-            <p class="success__first">Thành Công!</p>
-            <p class="success__second"><%= alert%></p>
-         </div>
-      </div>
-      <% } %>
+
       <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
       <script type="text/javascript">
          jQuery(document).ready(function ($) {
