--- a/views/admin/contact.ejs
+++ b/views/admin/contact.ejs
@@ -19,10 +19,9 @@
                      <th class="text-center align-middle">Action</th>
                   </tr>
                </thead>
-
-               <% for(let i = 0; i < contact.length; i++) {%>
+               <% index = 1 %> <% for(let i = contact.length - 1; i >= 0; i--) {%>
                <tbody>
-                  <th class="text-center align-middle"><%= i+1 %></th>
+                  <th class="text-center align-middle"><%= index++ %></th>
                   <td class="text-center align-middle"><%= contact[i].email %></td>
                   <td class="text-center align-middle"><%= contact[i].phonenumber %></td>
                   <td class="text-center align-middle"><%= contact[i].fullname %></td>
