--- a/views/components/favoritelist.ejs
+++ b/views/components/favoritelist.ejs
@@ -49,7 +49,7 @@
                      </div>
                   </div>
                </div>
-               <% for(let i = 0; i< listFavorite.length; i++) { %>
+               <% for(let i = listFavorite.length - 1; i >= 0; i--) { %>
                <div class="card mt-3">
                   <div class="row">
                      <div class="col-md-2">
