--- a/views/layouts/verify.ejs
+++ b/views/layouts/verify.ejs
@@ -5,17 +5,22 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <link rel="stylesheet" href="/styles/error.css" />
+      <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
       <title>Thành công</title>
    </head>
    <body>
       <section>
          <div class="errorMain">
             <div class="errorBackground">
-               <img src="https://dumacollective.com/wp-content/uploads/2017/07/Duma-Collective-07-1.jpg" alt="" />
+               <img
+                  src="https://cf.bstatic.com/xdata/images/hotel/max1024x768/328996486.jpg?k=63e6805a22e94767590621d3a2509700feabff3acdd33d899d47e63709393f5b&o=&hp=1"
+                  alt=""
+               />
             </div>
             <div class="errorContent">
-               <h1 class="title_text_err">404</h1>
-               <h3 class="desc_text_err">Bạn đã xác minh tài khoản thành công</h3>
+               <i class="bx bx-check-circle"></i>
+
+               <h3 class="desc_text_verify">Bạn đã xác minh tài khoản thành công</h3>
                <a href="/login" class="button_err">Đăng nhập</a>
             </div>
          </div>
