--- a/views/layouts/login.ejs
+++ b/views/layouts/login.ejs
@@ -1,123 +1,118 @@
 <!DOCTYPE html>
 <html lang="en">
-   <head>
-      <meta charset="UTF-8" />
-      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>Login</title>
-      <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
-      <link rel="stylesheet" href="styles/login.css" />
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" />
-      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" />
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" />
-      <link
-         rel="stylesheet"
-         href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css"
-      />
-   </head>
-   <body>
-      <% if (alert.length > 0) { %>
-      <div class="alert__success">
-         <i class="las la-check-circle"></i>
-         <div class="alert__content">
-            <div class="success__first">
-               <p>Thành Công!</p>
-            </div>
-            <div class="success__second">
-               <p><%= alert%></p>
-            </div>
-         </div>
-      </div>
-      <% } %> <% if (fail.length > 0) { %>
-      <div class="alert__fail">
-         <i class="las la-times-circle"></i>
-         <div class="alert__content">
-            <div class="fail__first">
-               <p>Thất bại!</p>
-            </div>
-            <div class="fail__second">
-               <p><%= fail%></p>
-            </div>
-         </div>
-      </div>
-      <% } %>
-      <div class="main">
-         <h1 class="title">Resort Real Estate Analysis</h1>
-         <div class="content-main">
-            <div class="content-left">
-               <h2 class="agileits1">Resort Real Estate Analysis</h2>
-               <p class="agileits2">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-            </div>
-            <div class="content-right">
-               <form action="#" method="post">
-                  <div class="form-group">
-                     <input
-                        type="text"
-                        id="email"
-                        name="email"
-                        placeholder="mail@example.com"
-                        title="Please enter a valid email"
-                        required=""
-                     />
-                  </div>
-                  <div class="form-group">
-                     <input
-                        type="password"
-                        class="lock"
-                        name="password"
-                        placeholder="Password"
-                        id="password"
-                        required=""
-                     />
-                  </div>
-                  <div class="form-group">
-                     <button type="submit" class="login" value="Login">Đăng nhập</button>
-                  </div>
-               </form>
-               <button class="f-pass js-forget-pass">Quên mật khẩu?</button>
-               <div class="content-footer">
-                  Bạn chưa có tài khoản? <a href="/register" class="js__show-register-popup re__link-pr">Đăng ký</a> ở
-                  đây
-               </div>
-            </div>
-         </div>
-      </div>
-      <div class="modal-fpass">
-         <div class="modal-header">
-            <h4>Lấy lại mật khẩu</h4>
-            <i class="fa-solid fa-xmark closeModal"></i>
-         </div>
-         <div class="modal-body">
-            <form action="/forget" method="post">
 
-               <div class="email-verificaion">
-                  <i class="fa-regular fa-envelope"></i>
-                  <input type="email" name="email" placeholder="email@example" />
-               </div>
-               
-               <input type="submit" class="btn-getpass"></input>
-            </form>
+<head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Login</title>
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
+    <link rel="stylesheet" href="styles/login.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" />
+    <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css" />
+</head>
+
+<body>
+    <% if (alert.length > 0) { %>
+        <div class="alert__success">
+            <i class="las la-check-circle"></i>
+            <div class="alert__content">
+                <div class="success__first">
+                    <p>Thành Công!</p>
+                </div>
+                <div class="success__second">
+                    <p>
+                        <%= alert%>
+                    </p>
+                </div>
             </div>
-         <div class="modal-footer">
-            Chưa là thành viên? <a href="/register" class="js__show-register-popup re__link-pr">Đăng ký</a> tại đây
-         </div>
-      </div>
-      <script>
-         const forgetBtn = document.querySelector('.js-forget-pass');
-         const modal = document.querySelector('.modal-fpass');
-         const closeModal = document.querySelector('.closeModal');
+        </div>
+        <% } %>
+            <% if (fail.length > 0) { %>
+                <div class="alert__fail">
+                    <i class="las la-times-circle"></i>
+                    <div class="alert__content">
+                        <div class="fail__first">
+                            <p>Thất bại!</p>
+                        </div>
+                        <div class="fail__second">
+                            <p>
+                                <%= fail%>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <% } %>
+                    <div class="main">
+                        <h1 class="title">Resort Real Estate Analysis</h1>
+                        <div class="content-main">
+                            <div class="content-left">
+                                <h2 class="agileits1">Resort Real Estate Analysis</h2>
+                                <p class="agileits2">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            </div>
+                            <div class="content-right">
+                                <form action="#" method="post">
+                                    <div class="form-group">
+                                        <input type="text" id="email" name="email" placeholder="mail@example.com" title="Please enter a valid email" required="" />
+                                    </div>
+                                    <div class="form-group">
+                                        <input type="password" class="lock" name="password" placeholder="Password" id="password" required="" />
+                                    </div>
+                                    <div class="form-group">
+                                        <button type="submit" class="login" value="Login">Đăng nhập</button>
+                                    </div>
+                                </form>
+                                <button class="f-pass js-forget-pass">Quên mật khẩu?</button>
+                                <div class="content-footer">
+                                    Bạn chưa có tài khoản? <a href="/register" class="js__show-register-popup re__link-pr">Đăng ký</a> ở đây
+                                </div>
+                            </div>
+                        </div>
+                    </div>
 
-         // Ham hien thi form quên mật khẩu (them class open vao modal )
-         const showModalForgetPass = () => {
-            modal.classList.add('open');
-         };
-         // Ham an form modal ẩn (an class open vao modal )
-         const removeModalForgetPass = () => {
-            modal.classList.remove('open');
-         };
+                    <div class="modal-fpass">
+                        <div class="modal-header" text-align="center">
+                            <h4>Lấy lại mật khẩu</h4>
+                            <i class="fa-solid fa-xmark closeModal"></i>
+                        </div>
+                        <div class="modal-body">
+                            <form action="/forget" method="post">
+                                <div class="email-verificaion11">
+                                    <div class="email-verificaion">
+                                        <i class="fa-regular fa-envelope"></i>
+                                        <input type="email" name="email" placeholder="email@example" />
+                                    </div>
+                                </div>
+                                <div class="getpass11">
+                                    <input type="submit" class="btn-getpass"></input>
+                            </form>
+                            </div>
 
-         forgetBtn.addEventListener('click', showModalForgetPass);
-         closeModal.addEventListener('click', removeModalForgetPass);
-      </script>
-   </body>
+                        </div>
+                        <div class="modal-footer">
+                            Chưa là thành viên? <a href="/register" class="js__show-register-popup re__link-pr">Đăng ký</a> tại đây
+                        </div>
+                    </div>
+
+                    <script>
+                        const forgetBtn = document.querySelector('.js-forget-pass');
+                        const modal = document.querySelector('.modal-fpass');
+                        const closeModal = document.querySelector('.closeModal');
+
+                        // Ham hien thi form quên mật khẩu (them class open vao modal )
+                        const showModalForgetPass = () => {
+                            modal.classList.add('open');
+                        };
+                        // Ham an form modal ẩn (an class open vao modal )
+                        const removeModalForgetPass = () => {
+                            modal.classList.remove('open');
+                        };
+
+                        forgetBtn.addEventListener('click', showModalForgetPass);
+                        closeModal.addEventListener('click', removeModalForgetPass);
+                    </script>
+</body>
+
 </html>
